2008-11-10  Sancho Lerena <slerena@artica.es>

        * include/funcions_db.php: Reference to inexistant table
        tagent_data_image has been deleted and fixed notice.

2008-11-08  Esteban Sanchez  <estebans@artica.es>

	* godmode/reporting/reporting_builder.php: Fixed a notice using
	get_db_value() which was replaced by get_db_sql().

	* include/functions_reporting.php: Fixed an error on
	get_fired_alerts_reporting_table() since id_alert field in
	talerta_agente_modulo is not reliable.

2008-11-08  Esteban Sanchez  <estebans@artica.es>

	* godmode/reporting/reporting_builder.php: Fixed value of 1 week
	period.

	* * include/functions_reporting.php: Fixed a bug in SLA calculation
	that affects small periods of time (less than 24 hours) due to data
	compression in the database.

	* * include/functions.php: Added get_events_in_group() to get the
	events of a group in a period of time. It handles group All properly.

2008-11-07  Sancho Lerena <slerena@gmail.com>

	* install.php: Installer create a bad homeurl variable, should be
	like /pandora_console, not http://localhost/pandora_console

2009-11-05  Jorge Gonzalez  <jorgegonz@artica.es>

        * include/languages/pt_BR.mo, include/languages/fr.po,
          include/languages/uk.mo, include/languages/ro.mo,   
          include/languages/ca.po, include/languages/sv.po,   
          include/languages/de.po, include/languages/zh_TW.po,
          include/languages/hi.po, include/languages/zh_CN.po,
          include/languages/fr.mo, include/languages/te.po,   
          include/languages/eu.po,  include/languages/hu.po,  
          include/languages/ca.mo, include/languages/de.mo,   
          include/languages/sv.mo, include/languages/ru.po, 
          include/languages/zh_TW.mo, include/languages/hi.mo,
          include/languages/zh_CN.mo, include/languages/gl.po,
          include/languages/te.mo, include/languages/eu.mo,   
          include/languages/hu.mo,  include/languages/pl.po,  